# fetalnav

./: .travis.yml  README.md  license.txt  requirements.txt  setup.py
c++/: CMakeLists.txt  fetalnav.cxx
docs/: _config.yml  index.html
docs/assets/css/: main.css
experiments/: MultiLinearTests.ipynb  engine.py  evaluate.ipynb  train.ipynb  train.py  transforms.ipynb
fetalnav/: __init__.py  api_cpp.py
fetalnav/data/: image.mhd  image.raw
fetalnav/datasets/: itk_metadata_classification.py
fetalnav/models/: __init__.py  alexnet.py  resnet.py  spn_models.py  vgg.py
fetalnav/transforms/: itk_transforms.py  tensor_transforms.py
www/: index.html  particles.js  particles.json
www/assets/js/: main.js
www/css/: style.css
www/js/: app.js
